fixing nav menu display on small screens

--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -55,6 +55,11 @@ border-color: transparent;
   padding: 0 30px;
 }
 
+h1, h2 {
+  text-shadow: 1px 1px #306430;
+   
+}
+
 nav button {
   width: 90%;
   margin: 0 auto;
@@ -117,4 +122,40 @@ h1, .nav-paragraph {
    color: #cce2cc;
    text-decoration:none;
  }
-
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
